fix to parsing response from mailbox inbox endpoint, timestamps to readable format

--- a/wwwroot/css/mail.css
+++ b/wwwroot/css/mail.css
@@ -348,7 +348,7 @@ table#messageHistory tr td button {
 table#inboxMessages tr td:nth-child(1),
 table#messageHistory tr td:nth-child(1) {
     /* Id */
-    width: 5%;
+    width: 10%;
 }
 
 table#inboxMessages tr td:nth-child(2),
@@ -366,7 +366,7 @@ table#messageHistory tr td:nth-child(3) {
 table#inboxMessages tr td:nth-child(4),
 table#messageHistory tr td:nth-child(4) {
     /* Attachments */
-    width: 15%;
+    width: 20%;
 }
 
 table#inboxMessages tr td:nth-child(5),
@@ -401,18 +401,12 @@ table#messageHistory tr td:nth-child(9) {
 
 table#inboxMessages tr td:nth-child(10),
 table#messageHistory tr td:nth-child(10) {
-    /* For Accounts Before */
-    width: 10%;
-}
-
-table#inboxMessages tr td:nth-child(11),
-table#messageHistory tr td:nth-child(11) {
     /* Status */
     width: 5%;
 }
 
-table#inboxMessages tr td:nth-child(12),
-table#messageHistory tr td:nth-child(12) {
-    /* Global */
+table#inboxMessages tr td:nth-child(11),
+table#messageHistory tr td:nth-child(11) {
+    /* Expired */
     width: 5%;
 }
